
2007-03-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: codecs.c, gnome_warning.c, xtoffmpeg.c, 
		gnome_ui.c, capture.c, app_data.c, job.c, 
		app_data.h, gnome_frame.c, gnome_options.c, 
		gnome_frame.h, main.c, options.c, xtoxwd.c:
		initial support for dragging frame to resize,
		fix for bug # 1689984 and bug # 1689959,
		also code cleanup
	* src/colors.c, src/colors.h: indentation

2007-03-28  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: partial fix for bug # 1689959
	* src: colors.c, colors.h, xtoffmpeg.c, capture.c, 
		job.c, app_data.h, job.h: fix for 
		bug # 1689984

2007-03-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: capture.c, job.h, gnome_options.c, options.c:
		fix for bug # 1651517

2007-03-21  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ffmpeg, ffmpeg-8195, ffmpeg-8133: updated ffmpeg to
		rev 8195 to fix bug # 1656899
	* src/app_data.c: fixes a segfault when running without
		any window manager

2007-03-16  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, src/xtoxwd.c: better fix for bug # 1680765
	* src/app_data.c: fix for bug # 1681107
	* src/capture.c: cosmetics
	* ppm2mpeg.sh: remove tracing

2007-03-15  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix for bug # 1669717
	* src/xtoxwd.c: fix for bug # 1680765
	* ppm2mpeg.sh: fix passing of frame rate to ffmpeg

2007-03-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/codecs.c: fix for bug # 1679545

2007-03-04  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: updated Italian x-lation

2007-02-28  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ppm2mpeg.sh: fix for mutable filenames with '.' right
		after the '%' of the format specifier.
	* ffmpeg, ffmpeg-svn6791, ffmpeg-svn8133, configure.in,
		src/xtoffmpeg.c: libav* version bump
	* src/xtoffmpeg.c: fix bug # 1584093 on the xvidcap side
		(adding a trellis quantiser to ffmpeg is beyond my
		skill and time at hand)
	* src/capture.c: fixed XDamage stuff that was completely 